publish: 修改经济数据接口排版偏移
generated from commit 7eff94bbfff87aece411fa73cab81a12bdc19b86

--- a/index.html
+++ b/index.html
@@ -3336,21 +3336,21 @@
 <td>freq</td>
 <td>String</td>
 <td>No</td>
-<td>原始数据的频率</td>
+<td>原始频率</td>
 <td>指标对应的时间频率,freq与公布数据的频率不一致时采用重取样的方式生成,可用频率为D, W, M, Q，A</td>
 </tr>
 <tr>
 <td>transform</td>
 <td>String</td>
 <td>No</td>
-<td>原始数据值</td>
-<td>计算方式,可用计算方式为lin-原始值,chg-环比增长,ch1-同比增长,pch-环比增长率,pc1-同比增长率,pca-复合年增长率,cch-连续复合增长率,cca-连续复合年增长率,log-自然对数</td>
+<td>lin</td>
+<td>计算方式,lin-原始值,chg-环比增长,ch1-同比增长,pch-环比增长率,pc1-同比增长率,pca-复合年增长率,cch-连续复合增长率,cca-连续复合年增长率,log-自然对数</td>
 </tr>
 <tr>
 <td>start_date</td>
 <td>String</td>
 <td>No</td>
-<td>原始数据的最开始的时间</td>
+<td>最早时间</td>
 <td>开始日期</td>
 </tr>
 <tr>
