publish: 添加全市场数据异常信息说明
generated from commit 71a97c0918e5192a04f129dc448303264a8ad97c

--- a/index.html
+++ b/index.html
@@ -3887,6 +3887,30 @@
 <td>20014</td>
 <td>传递的transform参数不存在 -- parameter transform xx is not exist</td>
 </tr>
+<tr>
+<td>30010</td>
+<td>必须传递market参数 -- parameter market is required</td>
+</tr>
+<tr>
+<td>30011</td>
+<td>不存在传递的market市场类型 -- There is no data for this field</td>
+</tr>
+<tr>
+<td>30012</td>
+<td>lenth参数的类型应该是正整数 -- lenth should bigger than 0</td>
+</tr>
+<tr>
+<td>30013</td>
+<td>lenth参数的类型错误 -- xxx is invalid, please send type int</td>
+</tr>
+<tr>
+<td>30014</td>
+<td>排行参数错误, -- xxx is invalid send gainers or losers</td>
+</tr>
+<tr>
+<td>30015</td>
+<td>传递的market参数没有对应的数据或者该参数不存在 -- There is no data for this field</td>
+</tr>
 </tbody></table>
 
       </div>
