publish: 添加股指异常信息
generated from commit e3a1c8c9a81954f6afac9369ba94f861966fe11e

--- a/index.html
+++ b/index.html
@@ -3542,7 +3542,7 @@
 </tr>
 </tbody></table>
 <h3 id='data-19'>data说明</h3>
-<p>市场类型不同data中包含的字段有所差异,如没有一下字段则说明该市场类型没有该字段
+<p>市场类型不同data中包含的字段有所差异,如没有某字段则说明该市场类型数据没有该字段
 如期货市场没有pe,mktcap等字段</p>
 
 <table><thead>
@@ -3703,7 +3703,7 @@
 </tr>
 </tbody></table>
 <h3 id='data-20'>data说明</h3>
-<p>市场类型不同data中包含的字段有所差异,如没有一下字段则说明该市场类型没有该字段
+<p>市场类型不同data中包含的字段有所差异,如没有某字段则说明该市场类型数据没有该字段
 如期货市场没有pe,mktcap等字段</p>
 
 <table><thead>
@@ -4156,6 +4156,22 @@
 <tr>
 <td>30015</td>
 <td>传递的market参数没有对应的数据或者该参数不存在 -- There is no data for this field</td>
+</tr>
+<tr>
+<td>40010</td>
+<td>读取数据异常 -- abnormal reading. Please try again</td>
+</tr>
+<tr>
+<td>40011</td>
+<td>需要传递symbol参数 -- parameter symbols is required</td>
+</tr>
+<tr>
+<td>40012</td>
+<td>时间参数格式错误 -- time not format like xxxx-xx-xx</td>
+</tr>
+<tr>
+<td>40013</td>
+<td>开始时间不能大于结束时间 -- start_date is greater than end_date</td>
 </tr>
 </tbody></table>
 
