publish: 添加外汇和数字货币换行美观
generated from commit 2928a0889b87a0b9782f9cf31815812bf9478fc3

--- a/index.html
+++ b/index.html
@@ -2239,7 +2239,7 @@
 <td>int</td>
 <td>True</td>
 <td>NA</td>
-<td>查询天数, 7代表7天, 范围1-30,1分钟仅支持7日以内,5分钟60分钟支持30日以内</td>
+<td>查询天数, 7代表7天, 范围1-30,1分钟仅支持7日以内,<br>5分钟60分钟支持30日以内</td>
 </tr>
 <tr>
 <td>endTime</td>
@@ -3080,7 +3080,7 @@
 <tr>
 <td>data</td>
 <td>list</td>
-<td>对应美股的名称和隶属交易所信息</td>
+<td>对应数字货币的名称和隶属交易所信息</td>
 </tr>
 <tr>
 <td>status</td>
@@ -3152,7 +3152,7 @@
 <td>String</td>
 <td>True</td>
 <td>NA</td>
-<td>交易对代码，同时获取多个以逗号分隔，如binance.algousdt,binance.btcusdt<br>拼接格式为交易所名称.交易对,具体交易所支持哪些交易对请查询v1/crypto/markets接口</td>
+<td>交易对代码，同时获取多个以逗号分隔，如binance.algousdt,binance.btcusdt<br>拼接格式为交易所名称.交易对,具体交易所支持哪些交易对请<br>查询v1/crypto/markets接口</td>
 </tr>
 <tr>
 <td>apikey</td>
@@ -3465,7 +3465,7 @@
 <td>String</td>
 <td>True</td>
 <td>NA</td>
-<td>交易对代码,如binance.btcusdt,binance.ethusdt,多个交易对以逗号分隔,逗号之间不要有空格</td>
+<td>交易对代码,如binance.btcusdt,binance.ethusdt,多个交易对<br>以逗号分隔,逗号之间不要有空格</td>
 </tr>
 <tr>
 <td>date</td>
@@ -3618,7 +3618,7 @@
 <td>int</td>
 <td>True</td>
 <td>NA</td>
-<td>查询天数, 7代表7天, 范围1-30,1分钟仅支持7日以内,5分钟60分钟支持30日以内</td>
+<td>查询天数, 7代表7天, 范围1-30,1分钟仅支持7日以内,<br>5分钟60分钟支持30日以内</td>
 </tr>
 <tr>
 <td>endTime</td>
@@ -4288,7 +4288,7 @@
 <td>int</td>
 <td>True</td>
 <td>NA</td>
-<td>查询天数, 7代表7天, 范围1-30,1分钟仅支持7日以内,5分钟60分钟支持30日以内</td>
+<td>查询天数, 7代表7天, 范围1-30,1分钟仅支持7日以内,<br>5分钟60分钟支持30日以内</td>
 </tr>
 <tr>
 <td>endTime</td>
